<resources>
    <string name="app_name">PMDM_DAM_Proyecto</string>
    <string name="title">PONG</string>
    <string name="play">Jugar</string>
    <string name="options"> Opciones</string>
    <string name="save"> Guardar Partida</string>
    <string name="load"> Cargar Partida</string>
    <string name="exit">Salir</string>
    <string name="color_ball">Color Bola</string>
    <string name="scores">Puntuaciones</string>
    <string name="red">Rojo</string>
    <string name="green">Verde</string>
    <string name="blue">Azul</string>
    <string name="name">Nombre</string>
    <string name="score">Puntuación</string>
    <string name="back">Atrás</string>
</resources>