<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <!--Radio buttons color de la pelota -->
    <item
        android:id="@+id/action_color"
        android:title="@string/color_ball"
        app:showAsAction="never"
        >
        <menu>
            <group android:checkableBehavior="single"
                >
                <item
                    android:id="@+id/action_red"
                    android:title="@string/red"
                    app:showAsAction="never"
                    android:checkable="true"
                    app:actionViewClass="android.widget.RadioButton" />
                <item
                    android:id="@+id/action_green"
                    android:title="@string/green"
                    app:showAsAction="never"
                    app:actionViewClass="android.widget.RadioButton"
                    android:checkable="true"
                    />
                <item
                    android:id="@+id/action_blue"
                    android:title="@string/blue"
                    android:checkable="true"
                    app:actionViewClass="android.widget.RadioButton"
                    app:showAsAction="never"
                    />
            </group>
        </menu>
    </item>
    <!--Cargar partida -->
    <item
        android:id="@+id/action_load"
        android:title="@string/load"
        android:icon="@android:drawable/ic_menu_upload"
        app:showAsAction="always">
    </item>
    <!--Guardar partida -->
    <item
        android:id="@+id/action_save"
        android:title="@string/save"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="always"
        >
    </item>
</menu>