<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scoresFragment"
    tools:context=".ScoresFragment"
    app:navGraph="@navigation/navgraph"
    android:background="@color/black">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

            <TableRow>
                <TextView
                    android:text="@string/name"
                    android:gravity="center"
                    android:padding="8dp"
                    android:textColor="@android:color/white" />
                <TextView
                    android:text="@string/score"
                    android:gravity="center"
                    android:padding="8dp"
                    android:textColor="@android:color/white" />
            </TableRow>
            <View
                android:layout_height="5dp"
                android:layout_width="10dp"
                android:background="@color/white"
                />
        </TableLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/btnAtras"
        android:layout_width="73dp"
        android:layout_height="56dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back"
        android:src="@android:drawable/ic_menu_revert" />
</FrameLayout>
